# nerf-multiservice

./: README.md  nerf-multiservice.cabal
thrift/: multiservice.thrift  subservices.thrift  types.thrift
tools/: nerf-multiservice.hs
